# pdf_extractext

./: .python-version  LICENSE  README.md  main.py  pyproject.toml  python
App/: main.py  requirements.txt
App/api/: dependences.py
App/api/routers/: document_reouter.py  extract_router.py
App/core/: config.py
App/domain/: interfaces.py  models.py
App/infrastructure/: mongo_repository.py  pymupdf_extractor.py
App/services/: pdf_service.py
Desktop/Proyecto extractext/pdfTrack/App/: requirements.txt
tests/: test_api.py  tests_service.py
